<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nouvelle_partie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/puissance4_mdpi" >

	<Button
		android:id="@+id/_buttonPartieUnJoueur"
		style="@android:style/Widget.Button.Transparent"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/texte_button_partie_un_joueur"
		android:textColor="@android:color/white" />

	<Button
		android:id="@+id/_buttonPartieMultijoueurLocale"
		style="@android:style/Widget.Button.Transparent"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/texte_button_partie_multijoueur_locale"
		android:textColor="@android:color/white" />

	<Button
		android:id="@+id/_buttonPartieMultijoueurBluetooth"
		style="@android:style/Widget.Button.Transparent"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/texte_button_partie_multijoueur_bluetooth"
		android:textColor="@android:color/white" />

</LinearLayout>
